// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders "Heading" with color prop 1`] = `
<h5
  class="sc-bdVaJa kSwyNF"
>
  Heading
</h5>
`;

exports[`renders "Heading" with color prop 2`] = `
<h5
  class="sc-bdVaJa imbdKA"
>
  Heading
</h5>
`;

exports[`renders "Heading" with l prop 1`] = `
<h5
  class="sc-bdVaJa bwckuJ"
>
  Heading
</h5>
`;

exports[`renders "Heading" with margin 1`] = `
<h5
  class="sc-bdVaJa hrCChk"
>
  Heading
</h5>
`;

exports[`renders "Heading" with no props 1`] = `
<h5
  class="sc-bdVaJa lhegUP"
>
  Heading
</h5>
`;

exports[`renders "Heading" with s prop 1`] = `
<h5
  class="sc-bdVaJa iPkvvH"
>
  Heading
</h5>
`;
